[지수] Algortihm 회고

--- a/ACDCBoostCourse/ACDCBoostCourse/Algortihm/Week 4/회고.md
+++ b/ACDCBoostCourse/ACDCBoostCourse/Algortihm/Week 4/회고.md
@@ -8,3 +8,4 @@
 
 알고리즘 문제를 해결하기 위해 추가적으로 적어주는 헤더파일들 구글링으로 무작정 검색하지 말고 조금씩이라도 암기할 필요성이 있어 보인다..
 
+포인터도 연습해보기.. 포인트 쓰는 게 익숙하지 않아서 아예 안 쓰게 되는데 그러면 안 된다..
